Mudanças no formato de build do projeto e alterações no readme.md