@@ -4,6 +4,8 @@
 
 ### Alunos: Felipe B. Ribeiro, Felipe F. Adames, Matheus O. H. Ris, Luiz H. M. Machado.
 
---
+---
 
-O projeto utiliza a versão 24 do java
+- O projeto utiliza a versão 24 do Java (Não garanto que o programa funcione em outras versões)
+- Use o maven para compilar o projeto com o comando ```mvn clean package```
+- Rode o projeto com ```java --enable-preview -jar target/cch-cripto-jar-with-dependencies.jar```
